--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.0.3",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartist": "^0.14.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
