--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@themesberg/volt-react-dashboard",
-  "description": "Volt React Dashboard is a free and open source admin dashboard template powered by React.js and Bootstrap 5",
-  "author": "Themesberg",
+  "name": "Trashnet",
+  "description": "Trashnet UI",
+  "author": "Complicated",
   "keywords": [
     "bootstrap 5",
     "react",
@@ -46,8 +46,9 @@
     "react-live": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.52.3",
     "simplebar-react": "^2.3.0"
   },
   "scripts": {
@@ -73,8 +74,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "sass": "^1.52.2"
   }
 }
