--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1",
+    "react-webcam": "^7.0.1",
     "sass": "^1.52.3",
     "simplebar-react": "^2.3.0"
   },
